--- a/JsonDiffPatch/JsonDiffPatch.csproj
+++ b/JsonDiffPatch/JsonDiffPatch.csproj
@@ -9,10 +9,11 @@
     <PackageTags>JSON, Diff, Patch, RFC, 6902</PackageTags>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <PackageVersion>1.0.0</PackageVersion>
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
 
 </Project>
